[project]
name = "blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "gradio>=5.41.1",
    "langchain>=0.3.27",
    "langchain-cli[inmem]>=0.0.36",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.4",
    "mcp>=1.12.4",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
